# rag

./: .claude.md  .dockerignore  .env.example  .env.local.example  .env.server  .gitattributes  .gitignore  .grepaiignore  .mcp.example.json  .mcp.json  .pre-commit-config.yaml  .test_durations  =0.35.0  =2.2.0  AGENTS.md  AUDIT_REPORT.md  Azbyka_RAG_PLAN_2025_v2.md  CACHING.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  DOCKER.md  DOCKER_CONTAINERS_REPORT.md  Dockerfile  Dockerfile.ingestion  EXECUTE_PLAN_PROMPT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  OPTIMIZATION_REPORT.md  QDRANT_CONNECTION_GUIDE.md  README.md  REDISVL_DESIGN.md  REPORT.md  ROADMAP.md  SECURITY.md  (+46 more)
.github/: pull_request_template.md
.grepai/: config.yaml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.signals/: decomposition-langfuse-coverage-20260507.json  done-worker-816.json  done-worker-docker-unify.json  done-worker-funnel-section.json  done-worker-grepai.json  orch-log.jsonl
data/: README.md  apartments.csv  test_properties.json
deploy/: README.md  sudoers-telegram-bot  telegram-bot.service
docker/: README.md
docs/: 2026-02-06-deep-server-audit-report.md  2026-02-06-plan-extra-tasks-review.md  2026-02-06-telegram-bot-go-live-review.md  2026-02-06-tz-full-audit.md  2026-02-18-docs-docker-audit.md  2026-02-19-docker-audit-474.md  2026-02-19-regression-gate-473.md  ADD_NEW_RAG_NODE.md  ADRS.md  AGENTS.override.md  ALERTING.md  API_REFERENCE.md  BOT_ARCHITECTURE.md  BOT_INTERNAL_STRUCTURE.md  CACHE_DEGRADATION.md  CLIENT_PIPELINE.md  COMPLETE_STRUCTURE.md  CONTEXTUALIZED_EMBEDDINGS.md  DEVELOPER_GUIDE.md  DOCUMENTATION_INDEX.md  ERROR_RESPONSES.md  GDRIVE_INGESTION.md  GIT_HYGIENE_RUNBOOK.md  HITL.md  HITL_CRM_FLOW.md  INDEX.md  INFRA_ISSUES_REPORT_1113_1126.md  INGESTION.md  LOCAL-DEV-SETUP.md  LOCAL-DEVELOPMENT.md  ML_PLATFORM_INTEGRATION_PLAN.md  ONBOARDING.md  ONBOARDING_CHECKLIST.md  PARALLEL-WORKERS.md  PIPELINE_OVERVIEW.md  RAG_API.md  (+16 more)
services/bge-m3-api/: Dockerfile  README.md  app.py  config.py  pyproject.toml  requirements.txt
services/llm-guard-api/: Dockerfile  app.py  config.py  pyproject.toml
services/user-base/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
telegram_bot/: .env.example  AGENTS.override.md  Dockerfile  README.md  __init__.py  bot.py  callback_data.py  config.py  feedback.py  implicit_feedback.py  logging_config.py  main.py  observability.py  observability_bootstrap.py  observability_payloads.py  preflight.py  pyproject.toml  requirements.txt  runtime_events.py  runtime_events_config.py  scoring.py  setup_qdrant_indexes.py  startup_status.py  test_bot_services.py  test_openai.py  test_qdrant_filtering.py  tracing_context.py
telegram_bot/agents/: README.md  __init__.py  agent.py  apartment_tools.py  context.py  crm_tools.py  history_agent.py  history_tool.py  hitl.py  manager_tools.py  rag_agent.py  rag_pipeline.py  rag_tool.py  supervisor.py  tools.py  utility_tools.py
telegram_bot/agents/history_graph/: README.md  __init__.py  graph.py  nodes.py  state.py
telegram_bot/config/: README.md  mini_app.yaml  services.yaml  services_en.yaml  services_ru.yaml  services_uk.yaml
telegram_bot/constants/: README.md  __init__.py  apartment_constants.py
telegram_bot/dialogs/: README.md  __init__.py  catalog.py  catalog_transport.py  client_menu.py  crm_ai_advisor.py  crm_cards.py  crm_contacts.py  crm_leads.py  crm_notes.py  crm_submenu.py  crm_tasks.py  crm_wizard_models.py  demo.py  faq.py  filter_constants.py  filter_dialog.py  funnel.py  handoff.py  manager_menu.py  root_nav.py  settings.py  states.py  viewing.py
telegram_bot/evaluation/: README.md  __init__.py  judges.py  prompts.py  runner.py
telegram_bot/graph/: README.md  __init__.py  config.py  context.py  edges.py  graph.py  state.py  supervisor_state.py
telegram_bot/graph/nodes/: README.md  __init__.py  cache.py  classify.py  generate.py  grade.py  guard.py  rerank.py  respond.py  retrieve.py  rewrite.py  transcribe.py
telegram_bot/handlers/: README.md  catalog_router.py  crm_callbacks.py  demo_handler.py  favorites_callbacks.py  filter_panel.py  handoff.py  phone_collector.py  results_callbacks.py  service_callbacks.py
telegram_bot/integrations/: README.md  __init__.py  cache.py  embeddings.py  event_stream.py  langfuse.py  memory.py  polling_lock.py  prompt_manager.py  prompt_templates.py
telegram_bot/keyboards/: README.md  catalog_keyboard.py  client_keyboard.py  demo_keyboard.py  filter_panel.py  phone_keyboard.py  property_card.py  services_keyboard.py
telegram_bot/locales/: README.md
telegram_bot/locales/en/: README.md  messages.ftl
telegram_bot/locales/ru/: README.md  messages.ftl
telegram_bot/locales/uk/: README.md  messages.ftl
telegram_bot/middlewares/: README.md  __init__.py  error_handler.py  fsm_cancel.py  i18n.py  langfuse_middleware.py  throttling.py
telegram_bot/models/: README.md  __init__.py  user.py
telegram_bot/pipelines/: README.md  __init__.py  client.py  state_contract.py
telegram_bot/services/: README.md  __init__.py  _retry.py  ai_advisor_service.py  apartment_extraction_pipeline.py  apartment_filter_extractor.py  apartment_formatter.py  apartment_llm_extractor.py  apartment_models.py  apartments_service.py  base_filter_extractor.py  bge_m3_client.py  bge_m3_dense.py  bge_m3_query_bundle.py  business_hours.py  cache.py  cache_policy.py  catalog_rendering.py  catalog_session.py  cesc.py  colbert_reranker.py  content_loader.py  coverage_mode.py  draft_streamer.py  embed_cache_helper.py  embeddings.py  error_utils.py  favorites_service.py  filter_extractor.py  forum_bridge.py  funnel_analytics_service.py  funnel_analytics_store.py  funnel_lead_scoring.py  generate_response.py  grounding_policy.py  handoff_state.py  handoff_summary.py  history_service.py  hot_lead_notifier.py  hybrid_retriever.py  (+43 more)
telegram_bot/static/: README.md
telegram_bot/static/photos/: README.md
telegram_bot/static/photos/demo/: README.md
(+1828 files in other folders)
