[project]
name = "contextual-rag"
version = "2.14.0"
description = "Contextual RAG Pipeline with DBSF + ColBERT hybrid search"
requires-python = ">=3.11"
dependencies = [
    "anthropic",
    "openai",
    "groq",
    "python-dotenv",
    "pydantic-settings>=2.0.0",  # Required by telegram_bot/config.py (BotConfig)
    "cachetools>=5.0.0",  # Required by telegram_bot/middlewares/throttling.py
    "numpy",
    "aiohttp",
    "requests",
    "qdrant-client>=1.16.2",  # Vector database client (v1.15+ for BM42 support)
    "langfuse>=3.14.0",       # LLM observability & tracing
    # Voyage AI Integration (2026-01-21)
    "voyageai>=0.3.0",        # Voyage AI embeddings and reranking
    "tenacity>=8.2.0",        # Retry logic with exponential backoff
    "redis>=7.1.0",
    "redisvl>=0.13.2",
    "aiogram>=3.25.0",
    "asyncpg>=0.31.0",
    # Performance (2026-02-06)
    "uvloop>=0.21.0",                     # 2-4x faster asyncio event loop
    # LangGraph Pipeline (2026-02-09)
    "langgraph>=1.0.3,<2.0",               # State graph for RAG pipeline
    "langchain-core>=1.2",                # Core abstractions (Embeddings, etc.)
    "langgraph-checkpoint-postgres>=2.0", # Postgres checkpointing for LangGraph
    # Conversation memory (#154)
    "langgraph-checkpoint-redis>=0.2.0",  # Redis checkpointer for LangGraph
    "langmem>=0.0.30",                    # SummarizationNode for conversation compression
]

[project.optional-dependencies]
# Local ML models (torch, FlagEmbedding, sentence-transformers)
# Only needed when running local model inference (BGE-M3, cross-encoder, etc.)
# Install: uv sync --extra ml-local
ml-local = [
    "FlagEmbedding",
    "scipy",
    "sentence-transformers",
    # PyTorch CPU-only (forced via [tool.uv.sources] → pytorch-cpu index)
    "torch>=2.0.0",
    "torchvision>=0.15.0",  # Must be direct dep for [tool.uv.sources] to apply CPU index
    "transformers>=4.30.0", # For HuggingFace tokenizers in HybridChunker
]

# Documentation tools
docs = [
    "mkdocs>=1.6.0",         # Documentation generator
    "mkdocs-material>=9.5.0",# Material theme
    "mkdocstrings[python]>=0.25.0",  # Auto API docs
]

# Voice bot (LiveKit Agents + RAG API)
voice = [
    "livekit-agents[silero,turn-detector]~=1.4",
    "livekit-plugins-elevenlabs~=1.1",
    "livekit-plugins-openai~=1.1",
    "livekit~=1.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.0",
]

# Ingestion pipeline (Docling, CocoIndex, PyMuPDF)
ingest = [
    "pymupdf>=1.26.0",
    "docling>=2.70.0",
    "docling-core>=2.61.0",
    "cocoindex>=0.3.28",
    "fastembed>=0.7.4",
]

# Evaluation tools (RAGAS, MLflow, dataset generation)
eval = [
    "mlflow>=3.9.0",
    "ragas>=0.4.3",
    "datasets>=3.0.0",
    "pandas>=2.0.0",
]

# All optional dependencies
all = [
    "contextual-rag[docs,voice,eval,ingest,ml-local]",
]

# =============================================================================
# DEPENDENCY GROUPS (PEP 735) — dev tools installed by default with `uv sync`
# =============================================================================

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pylint>=3.2.0",
    "bandit>=1.7.9",
    "vulture>=2.11",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-httpx>=0.35.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "click>=8.1.7",
    "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
    "pre-commit>=3.8.0",
    "telethon>=1.42.0",
    "pytest-split>=0.11.0",
]

# =============================================================================
# UV: CPU-only PyTorch (no CUDA — VPS has no GPU)
# SDK pattern from Context7: https://github.com/astral-sh/uv/blob/main/docs/guides/integration/pytorch.md
# =============================================================================

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

# =============================================================================
# RUFF CONFIGURATION (Modern Python Linter + Formatter, 2025)
# =============================================================================
# Ruff replaces: flake8, black, isort, pyupgrade, autoflake, and more
# Speed: 10-100x faster than traditional tools
# Documentation: https://docs.astral.sh/ruff/

[tool.ruff]
# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pycache__",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Line length: 100 (slightly longer than Black's 88 for readability)
line-length = 100
indent-width = 4

# Target Python 3.9+ (project minimum)
target-version = "py311"

# =============================================================================
# LINTING RULES
# =============================================================================

[tool.ruff.lint]
# Enable recommended rule sets (2025 best practices)
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes (undefined names, unused imports, etc.)
    "B",     # flake8-bugbear (common bugs and design problems)
    "I",     # isort (import sorting)
    "UP",    # pyupgrade (modernize Python code)
    "SIM",   # flake8-simplify (simplify code)
    "C4",    # flake8-comprehensions (better list/dict/set comprehensions)
    "PIE",   # flake8-pie (misc lints)
    "T20",   # flake8-print (detect print statements)
    "RET",   # flake8-return (return statement issues)
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib (prefer pathlib over os.path)
    "PERF",  # perflint (performance anti-patterns) - NEW 2025
    "RUF",   # Ruff-specific rules - NEW 2025
    "FURB",  # refurb (modernize Python idioms) - NEW 2025
    "ASYNC", # flake8-async (async/await best practices) - NEW 2025
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Function calls in argument defaults
    "T201",    # print() statements (we use them for logging)
    "PTH123",  # pathlib open() (we use built-in open())
    "PTH",     # os.path usage (pathlib migration not critical for this project)
    "ARG002",  # Unused method arguments (often required for interface compatibility)
    "B904",    # raise-without-from (context dependent, not always needed)
    "SIM113",  # enumerate-for-loop (minor optimization, not critical)
    # NEW 2025 rules - selective ignores
    "RUF001",  # ambiguous-unicode (false positives for Cyrillic/Ukrainian text)
    "RUF002",  # ambiguous-unicode-docstring (false positives for Cyrillic)
    "PERF203", # try-except-in-loop (acceptable for error handling in async)
    "PERF401", # manual-list-comprehension (readability over micro-optimization)
    "RUF012",  # mutable-class-default (dataclasses handle this correctly)
    "ASYNC230",# blocking-open-call (some files are small, async not always needed)
    "ASYNC240",# blocking-path-call (local filesystem ops are fast, async overhead not worth it)
]

# Allow auto-fix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "E402"]  # Allow unused imports and late imports
"evaluation/*.py" = ["T201"]      # Allow print() in evaluation scripts
"test_*.py" = ["E402", "T201", "SIM117"]  # Allow late imports, print(), nested with in tests
"tests/**/*.py" = ["E402", "T201", "SIM117"]  # Same for tests/ directory
"legacy/*.py" = ["ASYNC210"]      # Allow blocking HTTP calls in async functions (legacy code)
"src/ingestion/docling_client.py" = ["ASYNC240"]  # Legacy ingestion (replaced by unified pipeline)
"src/ingestion/gdrive_flow.py" = ["ASYNC240"]     # Legacy ingestion (replaced by unified pipeline)
"src/ingestion/service.py" = ["ASYNC240"]          # Legacy ingestion (replaced by unified pipeline)
"*.py" = ["ARG001"]               # Allow unused function arguments (common in callbacks)

# Import sorting configuration (isort replacement)
[tool.ruff.lint.isort]
known-first-party = ["config", "evaluation"]
force-single-line = false
lines-after-imports = 2

# =============================================================================
# FORMATTING
# =============================================================================

[tool.ruff.format]
# Use double quotes for strings (like Black)
quote-style = "double"

# Indent with spaces (4 spaces)
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Auto-detect line endings (LF on Linux, CRLF on Windows)
line-ending = "auto"

# Format code examples in docstrings
docstring-code-format = true

# Docstring code line length (dynamic = same as main code)
docstring-code-line-length = "dynamic"

# =============================================================================
# MYPY CONFIGURATION (Type Checking)
# =============================================================================
# Uncomment to enable strict type checking
# Run: mypy .

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true for strict mode
ignore_missing_imports = true  # Ignore missing stubs for now
explicit_package_bases = true  # Resolve duplicate module names in services/

# Per-module overrides
[[tool.mypy.overrides]]
module = "evaluation.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "FlagEmbedding.*"
ignore_missing_imports = true

# Legacy noisy modules — suppress until refactored
[[tool.mypy.overrides]]
module = [
    "src.contextualization.*",
    "src.ingestion.indexer",
    "src.ingestion.document_parser",
    "src.ingestion.docling_client",
    "src.ingestion.voyage_indexer",
    "src.ingestion.cocoindex_flow",
    "src.ingestion.unified.state_manager",
    "src.ingestion.unified.qdrant_writer",
    "src.ingestion.unified.cli",
    "src.ingestion.gdrive_indexer",
    "src.ingestion.service",
    "src.retrieval.*",
    "src.cache.*",
    "src.evaluation.ragas_evaluation",
    "src.evaluation.mlflow_integration",
    "src.governance.model_registry",
    "src.models.contextualized_embedding",
]
ignore_errors = true

# =============================================================================
# BANDIT CONFIGURATION (Security Linting)
# =============================================================================
# Uncomment to enable security checks
# Run: bandit -r . -c pyproject.toml

[tool.bandit]
exclude_dirs = [".venv", "tests", "evaluation", "legacy", "__pycache__"]
skips = ["B101"]  # Skip assert_used (common in tests)

# =============================================================================
# PYLINT CONFIGURATION (Comprehensive Linting)
# =============================================================================
# Run: pylint src/

[tool.pylint.main]
# Python version for compatibility checks
py-version = "3.11"

# Files/directories to exclude
ignore = ["legacy", "tests", ".venv", "__pycache__"]
ignore-patterns = [".*_old\\.py$", ".*_backup\\.py$"]

[tool.pylint.messages_control]
# Disable specific checks
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name (sometimes OK for ML code)
    "R0913",  # too-many-arguments (common in ML)
    "R0914",  # too-many-locals
    "W0511",  # fixme/todo comments
    "C0301",  # line-too-long (handled by ruff)
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "  # 4 spaces

[tool.pylint.basic]
# Good variable names
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "f", "e"]

[tool.pylint.design]
max-args = 10  # Allow more args (ML models need many params)
max-attributes = 15
max-branches = 15

# =============================================================================
# PYTEST CONFIGURATION
# =============================================================================

[tool.pytest.ini_options]
minversion = "8.0"
addopts = """
    -ra
    --strict-markers
    --strict-config
    --dist=loadscope
"""
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
norecursedirs = ["tests/legacy"]
timeout = 30
markers = [
    "unit: Unit tests with mocks (fast, no external deps)",
    "integration: Integration tests (requires Docker/API keys)",
    "slow: Tests taking > 5 seconds",
    "chaos: Chaos/resilience tests (service failures, fallbacks)",
    "load: Load/performance tests (concurrent users, throughput)",
    "e2e: End-to-end pipeline tests (require live services)",
    "smoke: Smoke tests (requires running services)",
    "benchmark: Benchmark tests (parser/reranker comparisons)",
    "legacy_api: tests for pre-LangGraph API (may need rewrite)",
    "requires_extras: Tests needing optional deps (voice/ingest/eval); skipped in core tier",
    "kommo: Live Kommo CRM API tests (requires KOMMO_ACCESS_TOKEN)",
    "xdist_group: Group tests onto same xdist worker (prevents global registry collisions)",
]
filterwarnings = [
    # trustcall 0.0.39 imports Send from deprecated langgraph.constants;
    # no upstream fix available yet (tracked in #306)
    "ignore:Importing Send from langgraph:DeprecationWarning",
]

# =============================================================================
# COVERAGE CONFIGURATION
# =============================================================================

[tool.coverage.run]
source = ["src", "telegram_bot"]
branch = true
omit = [
    "*/tests/*",
    "*/legacy/*",
    "*/__pycache__/*",
    "*/.venv/*",
    # Scripts directory (not production code)
    "scripts/*",
    "scripts/**/*",
    # Evaluation scripts (not production code)
    "src/evaluation/create_golden_set.py",
    "src/evaluation/generate_test_queries.py",
    "src/evaluation/run_ab_test.py",
    "src/evaluation/smoke_test.py",
    "src/evaluation/test_mlflow_ab.py",
    "src/evaluation/search_engines_rerank.py",
    "src/evaluation/evaluate_with_ragas.py",
    "src/evaluation/langfuse_integration.py",
    # One-off setup scripts
    "telegram_bot/setup_qdrant_indexes.py",
    # Test/debug scripts in wrong location
    "telegram_bot/test_*.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
