[project]
name = "rag-telegram-bot"
version = "0.1.0"
description = "RAG Telegram Bot with hybrid search"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "httpx>=0.28.0",
    "qdrant-client>=1.12.0",
    "redis>=5.0.0",
    "redisvl>=0.3.0",
    "voyageai>=0.3.0",
    "tenacity>=8.2.0",
    "fastembed>=0.4.0",
    "cachetools>=5.3.0",
    "python-dotenv>=1.0.0",
    "langfuse>=3.0.0",
    "openai>=1.10.0",
    "langchain-core>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "pydantic-settings>=2.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["telegram_bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
