[project]
name = "rag-telegram-bot"
version = "0.1.0"
description = "RAG Telegram Bot with hybrid search"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15.0",
    "httpx>=0.28.0",
    "qdrant-client>=1.14.0",  # v1.14+ for FormulaQuery score boosting
    "grpcio>=1.60.0",
    "redis>=5.0.0",
    "redisvl>=0.3.0",
    "voyageai>=0.3.0",
    "tenacity>=8.2.0",
    "cachetools>=5.3.0",
    "python-dotenv>=1.0.0",
    "langfuse>=3.0.0",
    "openai>=1.10.0",
    "langchain>=1.2",  # create_agent, ToolRuntime, middleware
    "langchain-core>=1.2",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-redis>=0.2.0",
    "langmem>=0.0.30",
    "langchain-openai>=0.3.0",
    "pydantic-settings>=2.12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["telegram_bot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
