[project]
name = "bge-m3-api"
version = "1.0.0"
description = "BGE-M3 Embeddings API - FastAPI service"
requires-python = ">=3.11"
dependencies = [
    # Core ML/Embeddings
    "FlagEmbedding==1.3.5",
    "torch==2.10.0",
    "transformers==4.57.6",
    "sentence-transformers==3.4.1",
    # FastAPI & Web Server
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "python-multipart==0.0.22",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    # Monitoring & Metrics
    "prometheus-client==0.24.1",
    # Utilities
    "numpy==1.26.4",
    "scipy==1.17.1",
]

[tool.uv]
# Use PyPI as default, PyTorch CPU index only for torch packages
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
