[project]
name = "llm-guard-api"
version = "1.0.0"
description = "LLM Guard Prompt Injection Scanner — FastAPI service"
requires-python = ">=3.11"
dependencies = [
    # llm-guard with ONNX runtime for CPU inference
    "llm-guard[onnxruntime]>=0.3.16",
    # FastAPI & Web Server
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
